tests/negative/regression/r4.orng
fn b () -> [0]Float { }